caputils-0.7.8
--------------

	* fix: pfring_recv no longer blocks when reading additional frames while
	       buffer is neither full or empty (i.e no packets can be read even
	       if buffer isn't empty)
	* add: capshow displays markers.
	* fix: is_marker properly returns dst port instead of zero when passing
	       zero as port.

caputils-0.7.7
--------------

	* add: support for AND/OR in filter.
	* add: hexdump_str() which is the same as old hexdump() but saves to a
	       string instead of writing to FILE.
	* add: progress report to capdump.
	* fix: regression fix for capdump buffer size causing ethernet streams
	       to fail for mtu > 4096.
	* fix: regression fix. multiple streams caused the second stream to be
	       ignored.

caputils-0.7.6
--------------

	* fix: uint64_t printing in capdump.
	* fix: fixing capfilter.
	* add: stream_copy as wrapper for stream_write operating on caphead.
	* add: caphead_t typedef
	* change: added default address argument for stream_from_getopt
	* change: capdump --marker now takes a port number.
	* add: functions for working with timepico.
	* add: improvements to capshow.
	* fix: asorted bugs related to new buffering algorithm and capfiles.

caputils-0.7.5
--------------

	* add: capshow (aliased as consumer-ls)
	* add: --tp.port which matches either src or dst port.
	* add: ability to set buffer size at initialization (use 0 for old
	       default)
	* change: the buffering behaviour has changed from only buffering when
	          empty to continious buffering.
	* change: `stream_t` is now a pointer and should be used in place of
	          `struct stream*`. Existing applications should change from
	          `stream_t*` to `stream_t`.
	* fix: pkg-config file libcap_utils-0.7 now includes all libraries.
	* add: stream_from_getopt and stream_print_info helpers.
	* fix: large-file support for 32bit arch.
	* fix: support for specifying pcap prefix to configure.